# linebrew

./: .gitignore  README.md  install.sh  pyproject.toml  uninstall.sh
data/: io.github.linebrew.Linebrew.desktop  io.github.linebrew.Linebrew.metainfo.xml
linebrew/: __init__.py  __main__.py  application.py  brew_interface.py  detail_panel.py  formula_list.py  notifications.py  preferences_dialog.py  progress_dialog.py  style.css  window.py
